--- a/Gorgulov Pavel/task 3/pom.xml
+++ b/Gorgulov Pavel/task 3/pom.xml
@@ -36,15 +36,17 @@
         </dependency>
     </dependencies>
 
-
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>2.1.1</version>
-        <configuration>
-            <failOnMissingWebXml>false</failOnMissingWebXml>
-        </configuration>
-    </plugin>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+                <configuration>
+                    <webXml>src/main/webapp/WEB-INF/web</webXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
